# astrofoto-mission-control

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/astro_api/: astro_engine.py  auth.py  capture_planning.py  catalog.py  fits_ingest.py  forecast.py  fov_service.py  image_cache.py  main.py  multi_session_planning.py  planning_common.py  postgres_migration.py  processing_planning.py  profiles.py  schemas.py  services.py  session_archive.py  session_planning.py  settings.py  tonight_board.py
apps/api/astro_api/data/: targets.json
apps/api/tests/: test_auth.py  test_auth_ownership.py  test_fits_ingest.py  test_forecast.py  test_fov.py  test_postgres_migration.py  test_profiles.py  test_session_archive.py  test_targets.py
apps/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: smoke.playwright.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: AuthLanding.tsx  CalibrationLibraryPanel.tsx  CapturePlan.tsx  FitsIngestPanel.tsx  FovConsole.tsx  MultiSessionPlanner.tsx  ProcessingPlanner.tsx  ProfileDock.tsx  SessionControl.tsx  SessionTimeline.tsx  SkyConditions.tsx  SkyScene.tsx  TargetRail.tsx  (+1 more)
docs/: API.md  AUDIT.md  DEVELOPMENT.md  HOMELAB.md  POSTGRES_MIGRATION.md  RELEASES.md  USER_GUIDE.md  architecture.md
infra/: Caddyfile
scripts/: backup-profiles.ps1  deploy.ps1  dev.ps1  lib.ps1  migrate-sqlite-to-postgres.ps1  rehearse-deploy.ps1  restore-profiles.ps1  test.ps1
(+23 files in other folders)
