[project]
name = "astrofoto-mission-control-api"
version = "0.1.0"
description = "FastAPI services for astrophotography planning and calculations."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "psycopg[binary]>=3.2,<4",
  "redis>=5,<6",
  "astropy>=7,<8",
  "astroplan>=0.10,<0.11",
  "numpy>=2,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.8,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

